fixed h2 spacing

--- a/index.css
+++ b/index.css
@@ -206,7 +206,7 @@ h2 {
   align-items: center;
   -webkit-justify-content: center;
   justify-content: center;
-  padding-top: 5px;
+  padding-top: 15px;
 }
 
 .follow {
